<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/green">

    <TextView
        android:id="@+id/currentStatusGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Идет соревнование умов между HAL2000 и АИ" />

    <Button
        android:id="@+id/selectGuestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_guest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentStatusGame" />

    <TextView
        android:id="@+id/guestDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/denied_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectGuestButton"
        tools:text="Место гостя уже загял AB" />

    <EditText
        android:id="@+id/guestName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/selectGuestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectGuestButton"
        app:layout_constraintTop_toTopOf="@id/selectGuestButton" />

    <Button
        android:id="@+id/selectWatchmanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_watchman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guestDescription" />

    <TextView
        android:id="@+id/watchmanDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/denied_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectWatchmanButton"
        tools:text="Место гостя уже загял РФД2000" />

    <EditText
        android:id="@+id/watchmanName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/selectWatchmanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectWatchmanButton"
        app:layout_constraintTop_toTopOf="@id/selectWatchmanButton" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/start_game_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchmanDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>